--- a/practice/src/App.css
+++ b/practice/src/App.css
@@ -28,11 +28,13 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.link{
+  padding:10px;
+  margin: 10px;
+}
+
+a{
+  text-decoration: none;
+  padding:10px;
+  margin: 10px;
 }
